fix logo size on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -184,7 +184,7 @@ h2 {
 font-size: 1.728em; }
 
 h3 {
-text-align: center;
+    text-align: center;
 font-size: 1.44em; }
 
 h4 {
@@ -328,6 +328,16 @@ display: table; }
 display: table; }
 .navigation .logo {
     float: left;
+}
+@media screen and (max-width: 480px) {
+    .navigation .logo {
+        font-size: 0.8em;
+    }
+}
+@media screen and (max-width: 320px) {
+    .navigation .logo {
+        font-size: 0.7em;
+    }
 }
 @media screen and (min-width: 768px) {
     .navigation .logo {
